<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/select"
        android:icon="@drawable/ic_check_white"
        android:title="@string/select"
        android:orderInCategory="0"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_choose_dir"
        android:icon="@drawable/ic_directory_white"
        android:title="@string/choose_directory"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_setting_white"
        android:title="@string/settings"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"/>
</menu>