<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/dir_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:text="@string/choose_directory"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/song_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/other_directory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/select_another_directory"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/music_player_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/divider"
            style="@style/Theme.MusicApp.CustomImageView"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:src="@drawable/divider"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp">

                <TextView
                    style="@style/Theme.MusicApp.IconTextView"
                    android:id="@+id/music_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_set"
                    android:textSize="20sp"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical"
                    app:drawableLeftCompat="@drawable/ic_music_note" />

                <TextView
                    style="@style/Theme.MusicApp.IconTextView"
                    android:id="@+id/music_artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_set"
                    android:gravity="center_vertical"
                    android:textSize="15sp"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:drawablePadding="5dp"
                    app:drawableLeftCompat="@drawable/ic_artists"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <ImageView
                android:id="@+id/music_control"
                style="@style/Theme.MusicApp.CustomImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_play_black"
                android:layout_gravity="center"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>